--- a/package.json
+++ b/package.json
@@ -1,40 +1,33 @@
 {
-    "name": "ckan-harvester",
-    "version": "1.0.0",
-    "description": "CKAN CORS Proxy",
-    "license": "Apache-2.0",
-    "homepage": "https://github.com/52North/ckan-harvester",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/52North/ckan-harvester.git"
+    "name" : "ckan-harvester",
+    "version" : "1.0.0",
+    "description" : "CKAN Harvester",
+    "license" : "Apache-2.0",
+    "homepage" : "https://github.com/52North/ckan-proxy",
+    "repository" : {
+        "type" : "git",
+        "url" : "https://github.com/52North/ckan-proxy.git"
     },
-    "bugs": {
-        "url": "https://github.com/52North/ckan-harvester/issues"
+    "bugs" : {
+        "url" : "https://github.com/52North/ckan-harvester/issues"
     },
-    "author": {
-        "name": "Matthes Rieke",
-        "github": "https://github.com/matthesrieke",
-        "email": "m.rieke@52north.org"
+    "author" : {
+        "name" : "Matthes Rieke",
+        "github" : "https://github.com/autermann",
+        "email" : "m.rieke@52north.org"
     },
-    "contributors": [
-        {
-            "name": "Christian Autermann",
-            "github": "https://github.com/autermann",
-            "email": "c.autermann@52north.org"
-        },
-        {
-            "name": "Matthes Rieke",
-            "github": "https://github.com/matthesrieke",
-            "email": "m.rieke@52north.org"
-        }
-    ],
-    "main": "./lib/proxy.js",
-    "bin": "./bin/index.js",
-    "dependencies": {
-        "bluebird": "^2.9.13",
-        "bunyan": "^1.3.4",
-        "clusterhub": "^0.2.6",
-        "extend": "^2.0.0",
-        "request-promise": "^0.4.0"
-    }
+    "contributors" : [ {
+            "name" : "Christian Autermann",
+            "github" : "https://github.com/autermann",
+            "email" : "c.autermann@52north.org"
+        } ],
+    "main" : "./",
+    "bin" : "./bin/index.js",
+    "dependencies" : {
+        "bluebird" : "^2.9.25",
+        "bunyan" : "^1.3.5",
+        "extend" : "^2.0.1",
+        "request-promise" : "^0.4.2"
+    },
+    "keywords" : [ ]
 }
