--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "bunyan": "^1.3.5",
         "extend": "^2.0.1",
         "request-promise": "^0.4.2",
+        "request": "2.61.0",
         "jsonix": "2.3.1",
         "jsonix-schema-compiler": "2.3.1",
         "moment": "2.10.6"
@@ -37,10 +38,5 @@
         "grunt-contrib-jshint": "~0.10.0",
         "grunt-contrib-nodeunit": "~0.4.1",
         "grunt-contrib-uglify": "~0.5.0"
-    },
-    "scripts": {
-        "prepublish": "java -jar node_modules/jsonix/lib/jsonix-schema-compiler-full.jar -d mappings -p WMS130 xsd/wms/1.3.0/capabilities_1_3_0.xsd",
-        "prepublish": "java -jar node_modules/jsonix/lib/jsonix-schema-compiler-full.jar -d mappings -p WMS111 xsd/wms/1.1.1/capabilities_1_1_1.xsd",
-        "prepublish": "java -jar node_modules/jsonix/lib/jsonix-schema-compiler-full.jar -d mappings -p WMS110 xsd/wms/1.1.0/capabilities_1_1_0.xsd"
     }
 }
